--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 <div class="flex flex-col h-screen bg-gray-100 w-screen justify-center items-center">
   <div class="flex">
-    <div class="mb-16">
+    <div class="mb-16 w-[600px]">
       <app-form (formValuesChanged)="handleFormValuesChange($event)"></app-form>
     </div>
     <div class="flex flex-col">
