--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -3,37 +3,37 @@
 
     <div class="flex space-x-2 items-center">
       <label for="closingText" class="block w-[140px]">Afsluiting</label>
-      <textarea id="closingText" formControlName="closingText" class="p-2 border border-gray-200"></textarea>
+      <textarea id="closingText" placeholder="Met vriendelijke groet," formControlName="closingText" class="p-2 border border-gray-200 w-[300px]"></textarea>
     </div>
 
     <div class="flex space-x-2 items-center">
       <label for="firstName" class="block w-[140px]">Voornaam</label>
-      <input id="firstName" formControlName="firstName" class="p-2 border border-gray-200" />
+      <input id="firstName" placeholder="John" formControlName="firstName" class="p-2 border border-gray-200 w-[300px]" />
     </div>
 
     <div class="flex space-x-2 items-center">
       <label for="lastName" class="block w-[140px]">Achternaam</label>
-      <input id="lastName" formControlName="lastName" class="p-2 border border-gray-200" />
+      <input id="lastName" placeholder="Doe" formControlName="lastName" class="p-2 border border-gray-200 w-[300px]" />
     </div>
 
     <div class="flex space-x-2 items-center">
       <label for="functionTitle" class="block w-[140px]">Functie</label>
-      <input id="functionTitle" formControlName="functionTitle" class="p-2 border border-gray-200" />
+      <input id="functionTitle" placeholder="Functie" formControlName="functionTitle" class="p-2 border border-gray-200 w-[300px]" />
     </div>
 
     <div class="flex space-x-2 items-center">
       <label for="personalEmail" class="block w-[140px]">Email</label>
-      <input id="personalEmail" formControlName="personalEmail" class="p-2 border border-gray-200" />
+      <input id="personalEmail" placeholder="naam@domein.com" formControlName="personalEmail" class="p-2 border border-gray-200 w-[300px]" />
     </div>
 
     <div class="flex space-x-2 items-center">
-      <label for="mobilePhoneNUmber" class="block w-[140px]">Telefoonnummer</label>
-      <input id="mobilePhoneNUmber" formControlName="mobilePhoneNUmber" class="p-2 border border-gray-200" />
+      <label for="mobilePhoneNUmber" class="block w-[140px]">Mobiele nummer</label>
+      <input id="mobilePhoneNUmber" placeholder="+31 6-12345678" formControlName="mobilePhoneNUmber" class="p-2 border border-gray-200 w-[300px]" />
     </div>
 
     <div class="flex space-x-2 items-center">
       <label for="linkedinLink" class="block w-[140px]">LinkedIn</label>
-      <input id="linkedinLink" formControlName="linkedinLink" class="p-2 border border-gray-200" />
+      <input id="linkedinLink" placeholder="https://linkedin.com/link-je-profiel" formControlName="linkedinLink" class="p-2 border border-gray-200 w-[300px]" />
     </div>
 
   </form>
